# EncryptVault

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
crates/encrypt/: Cargo.toml
crates/encrypt/src/: aes_gcm.rs  kdf.rs  lib.rs
crates/password-vault/: Cargo.toml
crates/password-vault/src/: lib.rs  model.rs  store.rs
crates/qr-engine/: Cargo.toml
crates/qr-engine/src/: lib.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs  master_password.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: btc.rs  eth.rs  lib.rs  mnemonic.rs
docs/superpowers/plans/: 2026-04-04-encryptvault.md  2026-04-05-settings-design.md  2026-04-05-theme-design.md  2026-04-07-light-mode-sidebar.md
docs/superpowers/specs/: 2026-04-04-encryptvault-design.md  2026-04-05-settings-design.md  2026-04-05-theme-design.md  2026-04-07-light-mode-sidebar-design.md  2026-04-07-night-mode-light-content-design.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  paths.rs  state.rs
src-tauri/src/commands/: encrypt_cmd.rs  mod.rs  qr_cmd.rs  settings_cmd.rs  vault_cmd.rs  wallet_cmd.rs
src/components/: ErrorBanner.tsx  Sidebar.tsx
src/context/: AppContext.tsx
src/pages/: EncryptPage.tsx  QRPage.tsx  SettingsPage.tsx  UnlockPage.tsx  VaultPage.tsx  WalletPage.tsx
