[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"
base64 = "0.22"
encrypt = { path = "../crates/encrypt" }
password-vault = { path = "../crates/password-vault" }
wallet = { path = "../crates/wallet" }
qr-engine = { path = "../crates/qr-engine" }
settings = { path = "../crates/settings" }
