[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
bip39 = { version = "2.0", features = ["rand"] }
coins-bip32 = "0.8"
k256 = { version = "0.13", features = ["ecdsa"] }
tiny-keccak = { version = "2", features = ["keccak"] }
rlp = "0.5"
bitcoin = { version = "0.31", features = ["rand-std"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
